--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -15,3 +15,8 @@ add hook server for web develop
 2024-06-5
 
 auto check hook enabled and support mutil hook server
+
+
+2024-6-22 
+
+remove lib, use oslib
